diesel_compile_tests/tests/fail/pg_specific_binary_expressions_only_usable_with_pg.stderr
error[E0277]: cannot use the `LIKE` operator with expressions of the type `diesel::sql_types::Binary` for the backend `Sqlite`
    --> tests/fail/pg_specific_binary_expressions_only_usable_with_pg.rs:21:32
     |
21   |         .get_result::<Vec<u8>>(&mut connection)
     |          ----------            ^^^^^^^^^^^^^^^ the trait `diesel::expression::operators::LikeIsAllowedForType<diesel::sql_types::Binary>` is not implemented for `Sqlite`
     |          |
     |          required by a bound introduced by this call
     |
     = note: expressions of the type `diesel::sql_types::Text` and `diesel::sql_types::Nullable<Text>` are 
             allowed for all backends
     = note: expressions of the type `diesel::sql_types::Binary` and `diesel::sql_types::Nullable<Binary>` are 
             allowed for the PostgreSQL backend
     = help: the following other types implement trait `diesel::expression::operators::LikeIsAllowedForType<ST>`:
               `Pg` implements `diesel::expression::operators::LikeIsAllowedForType<Citext>`
               `Pg` implements `diesel::expression::operators::LikeIsAllowedForType<diesel::sql_types::Binary>`
     = note: required for `Like<name, Bound<Binary, Vec<u8>>>` to implement `QueryFragment<Sqlite>`
     = note: 6 redundant requirements hidden
     = note: required for `SelectStatement<FromClause<table>, SelectClause<...>, ..., ...>` to implement `QueryFragment<Sqlite>`
     = note: required for `SelectStatement<FromClause<table>, SelectClause<...>, ..., ...>` to implement `LoadQuery<'_, diesel::SqliteConnection, Vec<u8>>`
note: required by a bound in `get_result`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
     |        ---------- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
  
     
error[E0277]: cannot use the `LIKE` operator with expressions of the type `diesel::sql_types::Binary` for the backend `Mysql`
    --> tests/fail/pg_specific_binary_expressions_only_usable_with_pg.rs:31:32
     |
31   |         .get_result::<Vec<u8>>(&mut connection)
     |          ----------            ^^^^^^^^^^^^^^^ the trait `diesel::expression::operators::LikeIsAllowedForType<diesel::sql_types::Binary>` is not implemented for `Mysql`
     |          |
     |          required by a bound introduced by this call
     |
     = note: expressions of the type `diesel::sql_types::Text` and `diesel::sql_types::Nullable<Text>` are 
             allowed for all backends
     = note: expressions of the type `diesel::sql_types::Binary` and `diesel::sql_types::Nullable<Binary>` are 
             allowed for the PostgreSQL backend
     = help: the following other types implement trait `diesel::expression::operators::LikeIsAllowedForType<ST>`:
               `Pg` implements `diesel::expression::operators::LikeIsAllowedForType<Citext>`
               `Pg` implements `diesel::expression::operators::LikeIsAllowedForType<diesel::sql_types::Binary>`
     = note: required for `Like<name, Bound<Binary, Vec<u8>>>` to implement `QueryFragment<Mysql>`
     = note: 6 redundant requirements hidden
     = note: required for `SelectStatement<FromClause<table>, SelectClause<...>, ..., ...>` to implement `QueryFragment<Mysql>`
     = note: required for `SelectStatement<FromClause<table>, SelectClause<...>, ..., ...>` to implement `LoadQuery<'_, diesel::MysqlConnection, Vec<u8>>`
note: required by a bound in `get_result`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
     |        ---------- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
  
     For more information about this error, try `rustc --explain E0277`.
